# rules_vscode

./: CHANGELOG.md  MODULE.bazel  README.md
examples/: BUILD.bazel
examples/golden/: ecosystem.code-workspace  fastverk.code-workspace  settings.json  worktrees.code-workspace
schema/: BUILD.bazel  code-workspace.schema.json  code_workspace.bzl
vscode/: BUILD.bazel  defs.bzl  folder.bzl  merge.bzl  providers.bzl  settings.bzl  workspace.bzl
vscode/private/: BUILD.bazel  render.bzl
